--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <p>Reach out to us for a personalized financial consultation</p>
             </div>
             <div class="contact-grid">
-<!--                 <div class="contact-info">
+                <div class="contact-info">
                     <div class="info-card">
                         <div class="info-icon">
                             <i class="fas fa-map-marker-alt"></i>
@@ -318,8 +318,8 @@
                             <p>Augusta Amadi Street Lekki</p>
                             <p>Lekki Penninsula II, Lagosi</p>
                         </div>
-                    </div> -->
-<!--                     <div class="info-card">
+                    </div>
+                    <div class="info-card">
                         <div class="info-icon">
                             <i class="fas fa-phone-alt"></i>
                         </div>
@@ -328,8 +328,8 @@
                             <p> 0810 103 3321</p>
                             <p>Mon-Fri, 9am-5pm EST</p>
                         </div>
-                    </div> -->
-<!--                     <div class="info-card">
+                    </div>
+                    <div class="info-card">
                         <div class="info-icon">
                             <i class="fas fa-envelope"></i>
                         </div>
@@ -338,7 +338,7 @@
                             <p>info@IAOProfessionalServices.com</p>
                             <p>support@IAOProfessionalService.com</p>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
@@ -346,7 +346,7 @@
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
-<!--                 <div class="contact-form-container">
+                <div class="contact-form-container">
                     <form id="contact-form" class="contact-form">
                         <div class="form-group">
                             <input type="text" id="name" name="name" class="form-input" placeholder=" " required>
@@ -379,7 +379,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary">Send Message</button>
                     </form>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
