--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 IAO Professional Services. All rights reserved.</p>
-                <p>Designed and built by  <a href="#">Mustapha Fathiu</a></p>
+                <p>Designed and built by  <a href="#">Mustapha Fathiu Bolaji</a></p>
             </div>
         </div>
     </footer>
